# typed-blocks

./: .gitignore  .isort.cfg  .readthedocs.yaml  MANIFEST.in  README.md  mypy.ini  setup.cfg
.github/workflows/: pull-request.yml  release.yml
blocks/: __init__.py  annotations.py  app.py  compat.py  decorators.py  graph.py  graph_utils.py  ioc.py  logger.py  metric_collector.py  metric_process.py  runners.py  types.py  utils.py  validation.py  visualization.py
blocks/db/: __init__.py  types.py
blocks/db/next/: sql.py  types.py
blocks/db/sql/: processors.py  sources.py
blocks/dto/: parallel_event.py
blocks/hive/: __init__.py  processors.py  sources.py
blocks/kafka/: __init__.py  app.py  events.py  processors.py  sources.py  topics.py  types.py
blocks/mssql/: __init__.py  app.py  next.py  processors.py  protocols.py  sources.py
blocks/postgres/: __init__.py  app.py  next.py  processors.py  protocols.py  sources.py
blocks/processors/: __init__.py  batcher.py
blocks/psql/: app.py  processors.py  sources.py  types.py
blocks/redis/: __init__.py  app.py  events.py  processors.py  serdes.py  sources.py  streams.py
blocks/rest/: events.py  processors.py  sources.py  threads.py
blocks/runners/: __init__.py  async_runner.py  rest_runner.py  runner.py
blocks/sources/: parallel_processor.py  schedule.py  subprocess.py
blocks/sqlite/: __init__.py
blocks/types/: __init__.py  base.py  dto.py  graph.py  ioc.py  metrics.py  multiprocess.py  process_metrics.py
docs/: conf.py  index.rst  requirements.txt
docs/pages/: blocks.rst  concepts.rst  connectors.rst  events.rst  examples.rst  install.rst  installation.rst  quickstart.rst
examples/: custom_send_metrics.py  heterogeneous.py  ioc.py  kafka_send_metrics.py  kafka_with_filter.py  parallel_processor_example.py  quickstart.py  sub_processor.py
tests/: test_annotations.py  test_batcher.py  test_graph.py  test_graph_visualization.py  test_inheritance.py  test_parallel_processor.py  test_runner.py  test_sub_process.py  test_validation.py
tests/annotations/: test_3_10_syntax.py  test_normal.py  test_string.py
tests/async/: test_app.py
tests/db/: test_sql.py  test_sqlite.py
tests/db/next/: test_table.py
tests/db/sqlite/: conftest.py  test_sqlite.py
tests/kafka/: test_source.py
tests/mssql/: test_mssql.py
tests/redis/: test_serdes.py  test_smoke.py
tests/requirements/: 3.10.txt  3.11.txt  3.12.txt  3.7.txt  3.8.txt  3.9.txt
tests/rest/: test_rest.py
tests/schedule/: test_schedule.py
tests/visualization/: conftest.py  test_graph_visualization.py
