[metadata]
name = typed-blocks
version = 0.0.0
description = Modular event-centric python library made for simplification typical stream applications development with python type system strong exploitation.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0 License
classifiers =
    Development Status :: 4 - Beta
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

author = Daniil Zubakin
author_email = <daniilzubakin@gmail.com>
url = https://github.com/severstal-digital/typed-blocks
project_urls =
    Bug Tracker = https://github.com/severstal-digital/typed-blocks/issues


[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
exclude=tests

[options.extras_require]
full = wunderkafka; schedule>=1.1.0; redis>=4.0.2; types-redis>=4.0.2; psycopg2-binary>=2.9.2; networkx>=2.6.3; matplotlib>=3.5.1; graphviz>=0.20.1; dill>=0.3.6; PyHive>=0.6.5; thrift>=0.16.0; thrift-sasl>=0.4.3; sasl>=0.3.1; pymssql>=2.2.6
schedule = schedule>=1.1.0
kafka = wunderkafka
redis = redis>=4.0.2; types-redis>=4.0.2
postgres = psycopg2-binary>=2.9.2
hive = PyHive>=0.6.5; thrift>=0.16.0; thrift-sasl>=0.4.3; sasl>=0.3.1
visualization = networkx>=2.6.3; matplotlib>=3.5.1;
graphviz = graphviz>=0.20.1; networkx>=2.6.3; matplotlib>=3.5.1;
parallel = dill>=0.3.6
mssql = pymssql>=2.2.6

[flake8]
max-line-length = 120
max-complexity = 15

[isort]
multi_line_output = 3
include_trailing_comma = true
default_section = THIRDPARTY
line_length = 120
length_sort = 1
known_first_party = blocks, tests

[darglint]
docstring_style=sphinx

[mypy]
# Untyped definitions and calls:
#   https://mypy.readthedocs.io/en/stable/config_file.html#untyped-definitions-and-calls
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True

# Configuring warnings
#   https://mypy.readthedocs.io/en/stable/config_file.html#configuring-warnings
warn_redundant_casts = True
warn_unused_ignores = True

no_implicit_optional = True
strict_optional = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

;# Import discovery
;#   https://mypy.readthedocs.io/en/stable/config_file.html#import-discovery


[mypy-dataclasses_avroschema.*]
ignore_missing_imports = True

[mypy-confluent_kafka.*]
ignore_missing_imports = True

[mypy-dateutil.*]
ignore_missing_imports = True

[mypy-dill.*]
ignore_missing_imports = True

[mypy-fastavro.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-graphviz.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-pydantic.*]
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

[mypy-requests_kerberos.*]
ignore_missing_imports = True

[mypy-schedule.*]
ignore_missing_imports = True

[mypy-pyhive.*]
ignore_missing_imports = True

# types-pymssql doesn't work properly
[mypy-pymssql.*]
ignore_missing_imports = True